UtahLiveDataTest/src/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>EligibilityDescription__c</fullName>
        <label>EligibilityDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EmailAddress__c</fullName>
        <description>Email address of the Agency or Organization.</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>EmployerIdentificationNumber__c</fullName>
        <label>EmployerIdentificationNumber</label>
        <length>9</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>EnableApplicationSubmissionEmail__c</fullName>
        <formula>Announcement__r.EnableApplicationSubmissionEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enable Application Submission Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ExecutiveApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExecutiveApprover</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationshKRT</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalApplicantStatus__c</fullName>
        <formula>IF(
OR(
ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Internally Reviewed&apos;),ISPICKVAL(Status__c,&apos;Reviewed&apos;),ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;),ISPICKVAL(Status__c,&apos;Withdrawn&apos;),ISPICKVAL(Status__c,&apos;Rejected&apos;), ISPICKVAL(Status__c,&apos;Submitted For Approval&apos;), ISPICKVAL(Status__c,&apos;Waived&apos;), ISPICKVAL(Status__c,&apos;Withdrawn&apos;), ISPICKVAL(Status__c,&apos;Sent for Review&apos;), ISPICKVAL(Status__c, &apos;Review Initiated&apos;), ISPICKVAL(Status__c,&apos;Reviewed&apos;), ISPICKVAL(Status__c,&apos;Revision Initiated&apos;), ISPICKVAL(Status__c, &apos;Converted to Award&apos;), ISPICKVAL(Status__c, &apos;Snapshot&apos;), ISPICKVAL(Status__c, &apos;Change Requested&apos;)
),Text(Status__c),&apos;Submitted to Grantor&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Applicant Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalCode__c</fullName>
        <label>ExternalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrgNameAndAddress__c</fullName>
        <description>This field is used in Application Cover Page form.</description>
        <formula>ExternalOrganization__r.Name &amp; BR() 
&amp;ExternalOrganization__r.FullBillingAddress__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External Org Name And Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrganizationCityStateZip__c</fullName>
        <formula>ExternalOrganization__r.BillingCity + &apos;, &apos; + ExternalOrganization__r.BillingState + &apos;, &apos; + ExternalOrganization__r.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalOrganizationCityStateZip</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrganizationName__c</fullName>
        <formula>ExternalOrganization__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalOrganizationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrganizationStreet__c</fullName>
        <formula>ExternalOrganization__r.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ExternalOrganizationStreet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalOrganization__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Orgnanization which owns the Application This field is also used on the Forms as well</description>
        <inlineHelpText>Which organization owns the application?</inlineHelpText>
        <label>Applicant Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FOANumber__c</fullName>
        <description>Field created to show the FOA Number as a header on the Application in the Grantee Module</description>
        <formula>HYPERLINK( 
 IF( 
 CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
 &apos;https://&apos;+ 
 MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-5,5) 
 +&apos;salesforce.com/&apos;, 
 LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)) 
 ) + Announcement__r.Id ,Announcement__r.AnnouncementNumber__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FOANumber</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FOChanged__c</fullName>
        <formula>IF((ISBLANK(TEXT(Announcement__r.FOALead__r.ModificationNumber__c))),false,true )</formula>
        <label>FO Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FedBizOps__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fed Biz Ops</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications12</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FedCheck__c</fullName>
        <formula>ISPICKVAL(Announcement__r.Program__r.ProgramPathway__c,&apos;Fed-Competitive&apos;) &amp;&amp; ISPICKVAL(Status__c,&apos;Submitted to Grantor&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FedCheck</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FederalAssistanceRequested__c</fullName>
        <label>Federal Assistance Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FederalAwardingAgency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Awarding Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications (FederalAwardingAgency)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FederalProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Federal Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Applications (Federal Program)</relationshipLabel>
        <relationshipName>Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieldHistoryEntityName__c</fullName>
        <description>This field will show Entity Name in Field level history.</description>
        <formula>&apos;Application&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field will show Entity Name in Field level history.</inlineHelpText>
        <label>Field History Entity Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinalApproverComments__c</fullName>
        <description>Field used by the Final Approver to make comments on the Application during the Application Approval or Rejection Process</description>
        <inlineHelpText>Field used by the Final Approver to make comments on the Application during the Application Approval or Rejection Process</inlineHelpText>
        <label>Final Approver Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FinalGrantAmountNegotiated__c</fullName>
        <description>This field is used on Grant view. This is populated in ReviewStepApplicationTriggerHelper to copy value from ReviewStepApplication AmountThisAction__c.</description>
        <label>FinalGrantAmountNegotiated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>FirstCreated__c</fullName>
        <formula>CreatedDate = LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FiscalApproval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fiscal Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications11</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FiscalYear__c</fullName>
        <label>FiscalYear</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form1AreyoucurrentlyFundedApplicant__c</fullName>
        <description>This Field is required in the Application Cover Page</description>
        <label>Are you currently a Funded Applicant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form2ApplicantName__c</fullName>
        <description>This field is used in the (Project Abstract Form)</description>
        <label>Applicant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form2BudgetsRequested__c</fullName>
        <description>This field is used in the Project Abstract Form</description>
        <label>Budgets Requested</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Form2CollectProgramIncome__c</fullName>
        <description>This field is used on the (Project Abstract Form)</description>
        <label>Do you Plan to collect Program Income</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form2Date__c</fullName>
        <description>This field in used in the Project Abstract Form.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form2Name__c</fullName>
        <description>This field is used in the (Project Abstract Form)</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form2NegotiatedTargetPopulation__c</fullName>
        <description>This field is used on the (Project Abstract Form)</description>
        <label>Negotiated Target Population</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form2PhysicalAddressPlaceofPerformance__c</fullName>
        <description>This field is used in the ( Project Abstract Form)</description>
        <label>Physical Address (Place of Performance)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Form2Project1Title__c</fullName>
        <description>This field is used in the ( Project Abstract Form)</description>
        <label>Project 1 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form2Project2Title__c</fullName>
        <description>This field is used in the ( Project Abstract Form)</description>
        <label>Project 2 Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form2RegisteredwithSAM__c</fullName>
        <description>This field is used in the Project Abstract Form</description>
        <label>Registered with System for Award</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form2Signature__c</fullName>
        <description>This field is used in the Project Abstract Form</description>
        <label>Signature</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form2TargetPopulationservedYTD__c</fullName>
        <description>This field is used in the (Project Abstract Form)</description>
        <label>Target Population served YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form2Title__c</fullName>
        <description>This field is used in the Project Abstract Form</description>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form2Vision__c</fullName>
        <description>This is the field on the Project Abstaract Form</description>
        <label>Vision</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Form4Date__c</fullName>
        <description>This field is used in the ( Certification regarding Lobbying form)</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form4FirstName__c</fullName>
        <description>This field is used in ( Certification Regarding Lobbying Form)</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form4LastName__c</fullName>
        <description>This field is used in ( Certification Regarding Lobbying Form)</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form4MiddleName__c</fullName>
        <description>This field is used in ( Certification Regarding Lobbying Form)</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form4Prefix__c</fullName>
        <description>This field is used in the ( Certification Regarding Lobbying Form)</description>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Dr</fullName>
                </value>
                <value>
                    <fullName>Rev.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form4Signature__c</fullName>
        <inlineHelpText>This field is used in the (Certification regarding Lobbying form)</inlineHelpText>
        <label>Singnature</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form4Suffix__c</fullName>
        <description>This field in used in the (Certification regarding Lobbying Form)</description>
        <label>Siffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>MD.</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form4Title__c</fullName>
        <description>This field is used in the (Certification Regarding Lobbying form)</description>
        <label>Title</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form5Date__c</fullName>
        <description>This field is used in the  (Statement of Assurances to Comply with Federal Assurances)</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Form5FirstName__c</fullName>
        <description>This field is used in the (Statement of Assurances to Comply with Federal Assurances Form)</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form5LastName__c</fullName>
        <description>This field is used in the  (Statement of Assurances to Comply with Federal Assurances)</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form5MiddleName__c</fullName>
        <description>This field is used in the  (Statement of Assurances to Comply with Federal Assurances)</description>
        <label>Middle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form5Prefix__c</fullName>
        <description>This field is used in the Grantor Forms on the (Statement of Assurances to Comply with Federal Assurances Form)</description>
        <label>Prefix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mr.</fullName>
                </value>
                <value>
                    <fullName>Mrs.</fullName>
                </value>
                <value>
                    <fullName>Miss</fullName>
                </value>
                <value>
                    <fullName>Ms</fullName>
                </value>
                <value>
                    <fullName>Dr.</fullName>
                </value>
                <value>
                    <fullName>Rev.</fullName>
                </value>
                <value>
                    <fullName>Prof.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form5Signature__c</fullName>
        <description>This field is used in the  (Statement of Assurances to Comply with Federal Assurances)</description>
        <label>Signature</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form5Suffix__c</fullName>
        <inlineHelpText>This field is used in the  (Statement of Assurances to Comply with Federal Assurances)</inlineHelpText>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>MD.</fullName>
                </value>
                <value>
                    <fullName>Ph.D.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Form5Title__c</fullName>
        <inlineHelpText>This field is used in the  (Statement of Assurances to Comply with Federal Assurances)</inlineHelpText>
        <label>Title</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormCFDATitle__c</fullName>
        <label>CFDA Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FormCompetitionNo__c</fullName>
        <label>Competition Identification Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormCompetitionTitle__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormDivision__c</fullName>
        <label>Division Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormFaxNumber__c</fullName>
        <label>Fax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail (FORMS)</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormOrganizationalAffiliation__c</fullName>
        <label>Organizational Affiliation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormSecondaryFirstName__c</fullName>
        <label>FormSecondaryFirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormSecondaryLastName__c</fullName>
        <label>FormSecondaryLastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormSecondaryTitle__c</fullName>
        <label>FormSecondaryTitle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FormsCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to track if all the Mandatory Forms are filled we can then submit the Application for Approval</description>
        <label>Forms Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for validation of form depends upon percentage of form filled.</description>
        <label>Forms Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantMonitor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantMonitor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applications8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeApplicantFunding__c</fullName>
        <label>GranteeApplicantFunding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeApplicantProvince__c</fullName>
        <label>Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GranteeApplicantState__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
                <value>
                    <fullName>New Hampshire</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GranteeDateSubmitted__c</fullName>
        <label>GranteeDateSubmitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GranteeDisplayEdit__c</fullName>
        <formula>OR((TEXT(Status__c) = &apos;Approved&apos;),(TEXT(Status__c) = &apos;Submitted to Grantor&apos;),(TEXT(Status__c) = &apos;Accepted&apos;),(TEXT(Status__c) = &apos;Converted to Grant&apos;)  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Display Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeFederalFunding__c</fullName>
        <label>GranteeFederalFunding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeLocalFunding__c</fullName>
        <label>GranteeLocalFunding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeOtherFunding__c</fullName>
        <label>Other Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeProgramincome__c</fullName>
        <label>Program income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeProposedProjectStartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GranteeRequestedAmount__c</fullName>
        <label>Grantee Requested Amount</label>
        <summarizedField>ApplicationBudgetCategory2__c.Amount__c</summarizedField>
        <summaryForeignKey>ApplicationBudgetCategory2__c.Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>GranteeStateFunding__c</fullName>
        <label>State Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeSubmittoGrantsgov__c</fullName>
        <formula>(TEXT(Status__c) != &apos;Approved&apos;) || !FormsValidated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Submit to Grants.gov</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GranteeTotalFunding__c</fullName>
        <formula>GranteeFederalFunding__c + GranteeApplicantFunding__c + GranteeStateFunding__c + GranteeLocalFunding__c + GranteeOtherFunding__c + GranteeProgramincome__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Funding</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GranteeTypeOfSubmission__c</fullName>
        <label>Type Of Submission</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pre-Application</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Changed/Corrected Application</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GrantorOrganizationName__c</fullName>
        <formula>Announcement__r.OrganizationName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantorOrganizationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GrantsManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GrantsManager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ApplicationshKRd</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HasAward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Award</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HeaderText__c</fullName>
        <formula>IF( ApplicationUpdateCount__c == 0, &apos;Complete Application Profile - &apos;+ Name +&apos; (Step 2 of 2)&apos;, &apos;Application Number - &apos;+ Name +&apos; (Status: &apos; + TEXT(Status__c)+&apos;)&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HideApplicationsForInternalUser__c</fullName>
        <formula>OR(AND(TEXT($User.UserType) = &apos;Standard&apos;, TEXT(Status__c) =&apos;Submitted&apos;),TEXT($User.UserType) != &apos;Standard&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideApplicationsForInternalUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDeleteButton__c</fullName>
        <formula>NOT(TEXT( $User.UserType ) = &apos;Standard&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideDeleteButton</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c,&apos;Created&apos;),ISPICKVAL(Status__c,&apos;Internally Reviewed&apos;),ISPICKVAL(Status__c,&apos;Revision Initiated&apos;)))</formula>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditDeleteBtn__c</fullName>
        <formula>NOT(OR(ISPICKVAL(Status__c , &apos;Created&apos;), ISPICKVAL(Status__c , &apos;Internally Reviewed&apos;)))</formula>
        <label>Hide Edit Delete Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForNotUOVC__c</fullName>
        <formula>IF( AND(GrantorOrganizationName__c != &apos;UOVC&apos;, GrantorOrganizationName__c != &apos;SYSTEM&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideForNotUOVC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForNotUSBECTE__c</fullName>
        <formula>IF(OR(ProgramBudgetTypeUSBE__c != &apos;CTE&apos;, GrantorOrganizationName__c != &apos;USBE&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideForNotUSBECTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForNotUSBE__c</fullName>
        <formula>IF(GrantorOrganizationName__c != &apos;USBE&apos;, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideForNotUSBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForUSBECTE__c</fullName>
        <formula>IF(OR(ProgramBudgetTypeUSBE__c = &apos;CTE&apos;, GrantorOrganizationName__c != &apos;USBE&apos;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideForUSBECTE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideFormEditAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Form Edit Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideForm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HideForm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideGrantLookup__c</fullName>
        <formula>ISPICKVAL(ApplicationType__c,&apos;New&apos;)</formula>
        <label>Hide Grant Lookup</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>